# mod_authn_persona

./: .gitignore  .indent.pro  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  README.md  TODO  configure.ac  mod_authn_persona.kdev4
src/: cookie.c  cookie.h  defines.h  hmac.c  hmac.h  mod_authn_persona.c  mod_authnz_persona.c  verify.c  verify.h  version.h.in
t/: TEST  testidp.t
t/conf/: apache_test_config.pm  extra.conf  extra.conf.in  httpd.conf
t/htdocs/: index.html  login.shtml  logout.shtml  testidp.shtml
t/logs/: access_log  error_log
tools/: bin2c.c
